# presburger

./: CHANGELOG.md  LICENSE  README.md  presberger.cabal  presburger.cabal
src/: Automata.hs  Automaton.hs  Formula.hs  Parser.hs  Presberger.hs  Presburger.hs
