cabal-version:       >=1.10
name:                presberger
version:             0.1.0.0
synopsis:            An automaton based satisfiability checker for presberger arithmetic
homepage:            https://github.com/eddiejones2108/presburger/
license:             BSD3
license-file:        LICENSE
author:              Eddie Jones
maintainer:          eddiejones2108@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  -- exposed-modules:
  other-modules:      Automaton
                      Formula
                      Parser
  build-depends:      base >=4.13 && <4.14, containers, mtl, parsec
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  hs-source-dirs:     src
  default-language:   Haskell2010
